Mobile Menu Submenu z-index Fix for Homepage

--- a/css/rj-mobile-menu.css
+++ b/css/rj-mobile-menu.css
@@ -21,7 +21,7 @@ nav.rj-mobile-menu a:hover {background-color: #bfe79e; text-align: center;}
 #rj-mobile .submenu i {float: right; display: block; margin: 0 0 0; width: 0; height: 0; border: 5px solid transparent; border-top: 7px solid #609736;}
 #rj-mobile .submenu ul {position: relative; top: 0; display: none; width: 100%; background-color: #efefef; border: none; text-align: center; border-radius: 0;}
 .open ul#rj-mobile {display: block;}
-.active ul#rj-mobile {display: block;}
+.active ul#rj-mobile {display: block;z-index: 1;}
 
 nav.rj-mobile-menu {float: right; text-align: center; text-transform: uppercase; letter-spacing: 1px; font-size: .85em;border-radius: 0;}
 nav.rj-mobile-menu ul a.mob-hide {display: none;}
